poc/ex_yaml/code-server.yaml
# Code Server - Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: eu.gcr.io/wsdsw-sandbox/code-server:latest
        imagePullPolicy: Always
        name: code-server
---
apiVersion: v1
kind: Service
metadata:
 name: code-server-service
 namespace: code-server
spec:
 ports:
 - port: 80
   targetPort: 8080
 selector:
   app: code-server
 type: ClusterIP
